--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
 	}
 }
 
+defaultTasks "clean", "build"
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -46,6 +48,7 @@ dependencies {
 	compile('org.seasar.doma.boot:doma-spring-boot-starter:1.1.0')
 	compile group: 'com.google.guava', name: 'guava', version: '20.0'
 	runtime('mysql:mysql-connector-java')
+	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
