--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
-	ext {
-		springBootVersion = '1.4.3.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven {
-			url 'https://oss.sonatype.org/content/repositories/snapshots'
-		}
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.4.3.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 defaultTasks "clean", "build"
@@ -26,29 +26,34 @@ processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
 
 jar {
-	baseName = 'syu-ho-api'
-	version = '0.0.1-SNAPSHOT'
+    baseName = 'syu-ho-api'
+    version = '0.0.1-SNAPSHOT'
 }
 
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
-	maven {
-		url 'https://oss.sonatype.org/content/repositories/snapshots'
-	}
+    mavenCentral()
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-jersey')
-	compile('org.springframework.boot:spring-boot-starter-jdbc')
-	compile('org.springframework.boot:spring-boot-starter-social-twitter')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-devtools')
-	compile('org.seasar.doma.boot:doma-spring-boot-starter:1.1.0')
-	compile group: 'com.google.guava', name: 'guava', version: '20.0'
-	runtime('mysql:mysql-connector-java')
-	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
-	compileOnly('org.projectlombok:lombok')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-jersey')
+    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('org.springframework.boot:spring-boot-starter-social-twitter')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-devtools')
+    compile('org.seasar.doma.boot:doma-spring-boot-starter:1.1.0')
+    compile('com.ryantenney.metrics:metrics-spring:3.1.3')
+    compile group: 'com.google.guava', name: 'guava', version: '20.0'
+    compile 'io.dropwizard.metrics:metrics-core:3.1.2'
+    compile 'io.dropwizard.metrics:metrics-servlet:3.1.2'
+
+    runtime('mysql:mysql-connector-java')
+    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+    compileOnly('org.projectlombok:lombok')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
